// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Any repeated 1`] = `
"/**
 * @name QueryPoolsResponse
 * @package osmosis.gamm.v1beta1
 * @see proto type: osmosis.gamm.v1beta1.QueryPoolsResponse
 */
export interface QueryPoolsResponse {
  pools: Any[];
  /**
   * pagination defines the pagination in the response.
   */
  pagination?: PageResponse;
}"
`;

exports[`Any standard 1`] = `
"/**
 * @name QueryPoolResponse
 * @package osmosis.gamm.v1beta1
 * @see proto type: osmosis.gamm.v1beta1.QueryPoolResponse
 */
export interface QueryPoolResponse {
  pool?: Any;
}"
`;

exports[`Cast repeated 1`] = `
"/**
 * @name QueryPoolsResponse
 * @package osmosis.gamm.v1beta1
 * @see proto type: osmosis.gamm.v1beta1.QueryPoolsResponse
 */
export interface QueryPoolsResponse {
  pools: (Pool1 | Pool2 | Any)[] | Any[];
  /**
   * pagination defines the pagination in the response.
   */
  pagination?: PageResponse;
}"
`;

exports[`Cast standard 1`] = `
"/**
 * @name QueryPoolResponse
 * @package osmosis.gamm.v1beta1
 * @see proto type: osmosis.gamm.v1beta1.QueryPoolResponse
 */
export interface QueryPoolResponse {
  pool?: Pool1 | Pool2 | Any | undefined;
}"
`;
